--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "jeroennoten/laravel-adminlte": "^1.25",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "nwidart/laravel-modules": "^5.0",
         "thomaswelton/laravel-gravatar": "~1.0"
     },
     "require-dev": {
@@ -35,7 +36,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Modules\\": "Modules/"
         },
         "classmap": [
             "database/seeds",
