--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,10 @@
         "fideloper/proxy": "^4.0",
         "jeroennoten/laravel-adminlte": "^1.25",
         "laravel/framework": "5.8.*",
+        "laravel/passport": "^7.3",
         "laravel/tinker": "^1.0",
         "nwidart/laravel-modules": "^5.0",
-        "thomaswelton/laravel-gravatar": "~1.0"
+        "thomaswelton/laravel-gravatar": "~1.0",
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
