--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/passport": "^7.3",
         "laravel/tinker": "^1.0",
         "nwidart/laravel-modules": "^5.0",
-        "thomaswelton/laravel-gravatar": "~1.0",
+        "spatie/laravel-searchable": "^1.3",
+        "thomaswelton/laravel-gravatar": "~1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
